# postmodern

./: Cargo.toml  README.md  build.sh
assets/: words.txt
image/: testing_path.txt
src/: main.rs  words.rs
templates/: index.html  info.html  layout.html  word_pair.html  words.html
